--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+html {
+  display: table;
+  margin: auto;
+}
+
 body{
   width: 1100px;
   position: relative;
-  margin: 0px, auto,
+  margin: 0px, auto;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .helm {
